// Generated file
import "ccsds_mal/types.proto";



package cop1.protobuf;

message IfQueueUnit {
extensions 5 to 105;

  optional ccsds_mal.protobuf.INTEGER nb_remaining_bytes = 1;
  optional ccsds_mal.protobuf.BOOLEAN last_state = 2;
  optional ccsds_mal.protobuf.BLOB mnemonic = 3;
  optional ccsds_mal.protobuf.INTEGER nb_emitted_bytes = 4;
}
